== Release 0.3

2005-04-21 Diego 'Flameeyes' Pettenò <flameeyes@users.berlios.de>
	* Added pkgconfig file to allow knetload find libksnmp using pkg-config
	  instead of searching for it.
	* Fixed compilation under amd64 platform.

2005-02-18 Diego 'Flameeyes' Pettenò <flameeyes@users.berlios.de>
	* Added a function to get the interface index from the interface name
	  (ifDescr field).
	* Added a flagmask to define which values should be get when requesting
	  interfaces.
	* Added test for the new Device1213::getIfIndex() function (name2index).
	* Changed configure.in.in to use a better check (no need to do the
	  check by hand, don't remember why I was doing this).
	* Delete the session instance in tests.

2005-02-16 Diego 'Flameeyes' Pettenò <flameeyes@users.berlios.de>
	* Added LIBKSNMP_VERSION macro for test for version of library for
	  future backward compatibility for software.
	* Added SNMPver enum to define the version of SNMP protocol to use
	  (imported from KNetLoad).
	* Added createSession() commodity function to create a session without
	  need to check for version to use.
	* Fixed tests to compile on some configurations in which uint32_t is
	  not defined.
	* Cleanup of configure checks for net-snmp, now should work better.