@@ -12,6 +12,14 @@ KDE_CHECK_LIB(netsnmp, init_snmp, [NETSNMP_LIBS="$(net-snmp-config --libs)"; NET
 AC_SUBST(NETSNMP_LIBS)
 AC_SUBST(NETSNMP_LDFLAGS)
 
+AC_ARG_ENABLE([tests],
+	AC_HELP_STRING([--enable-tests], [Enable building of library tests.]),
+	wants_tests=${enableval}, wants_tests=no)
+
+if tests "x$wants_tests" = "xno"; then
+	DO_NOT_COMPILE="$DO_NOT_COMPILE tests"
+fi
+
 #############################################################################
 # Those are all net-snmp inherited tests, needed to make libksnmp work on
 # non-x86 systems.
