@@ -4,6 +4,7 @@
 	* Added pkgconfig file to allow knetload find libksnmp using pkg-config
 	  instead of searching for it.
 	* Fixed compilation under amd64 platform.
+	* Added --enable-tests params which enables to avoid tests compilation.
 
 2005-02-18 Diego 'Flameeyes' Pettenò <flameeyes@users.berlios.de>
 	* Added a function to get the interface index from the interface name
